# spicyTech

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
neo/: CMakeLists.txt  main.cpp
neo/engine/: CMakeLists.txt  license.hpp  logger.cpp  logger.hpp  main.cpp  spicyTech  system.cpp  system.hpp
neo/glad/include/glad/: glad.h
neo/glad/src/: glad.c
